<resources>
    <string name="app_name">My Spot</string>
    <string name="invalid_name">Enter Valid Name</string>
    <string name="invalid_Duaration">Enter Valid Duration</string>
    <string name="invalid_Mobile_Number">Enter Valid Mobile Number</string>
    <string name="invalid_Car_Number">Enter Valid Car Number</string>
    <string name="book_your_spot">Book Your Spot</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="car_number">Car Number</string>
    <string name="submit">Submit</string>
    <string name="log_out">Log Out</string>
    <string name="duration">Duration</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">LOGIN</string>
    <string name="new_user_sign_up">New User? Sign Up</string>
</resources>